# cnake

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  meson.build  snake.c
src/client/: Cargo.toml  display.c  display.h  snake.c
src/client/src/: main.rs
src/server/: client.c  client.h  game.c  game.cpp  game.h  main.c  main.cpp  main.h  snake.cpp  snake.h  socket.c  socket.h  util.h
src/server/connection/: clientConnection.cpp  clientConnection.h  clientGreeter.cpp  clientGreeter.h  connectionManager.cpp  connectionManager.h
src/util/: Threadable.cpp  Threadable.h  list.c  list.h  logger.cpp  logger.h  move.h
